fixed cloud-init payload examples

--- a/providers/vmware/plans/bigip-and-app-ovf-props/terraform.tfvars.1count.example
+++ b/providers/vmware/plans/bigip-and-app-ovf-props/terraform.tfvars.1count.example
@@ -62,8 +62,9 @@ check_bigip_ready         = true
 # check_bigip_timeout     = "900s"
 # Must match instance count from bigip_ipv4_network_addresses 
 # check_bigip_hosts       = [null]
-
-
+# Root is only user with initial ssh access. 
+# check_bigip_username    = "root"
+check_bigip_password      = "iNitialSTROnGPaZZwrD"
 
 ### APPLICATION VM
 vsphere_app_virtual_machine = "kinetic-server-cloudimg-amd64-template"
